--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 </script>
 </script>
 <script type="text/javascript">
-  var TUDTN_Nme_yOFFFc = {"it":4532227,"key":"e9cd5"};
+  var TUDTN_Nme_yOFFFc = {"it":4159670,"key":"79256"};
 </script>
-<script src="https://dfmpe7igjx4jo.cloudfront.net/4c91571.js"></script>
+<script src="https://dfmpe7igjx4jo.cloudfront.net/e6a78ed.js"></script>
 </body>
 </html>
