--- a/index.html
+++ b/index.html
@@ -159,12 +159,10 @@
   </div>
 
   <!-- Step 3 -->
-<!-- Step 3 -->
-<div class="box hidden" id="generatingBox">
-  <h2 id="generatingText">Generating...</h2>
-  <button id="continueBtn" onclick="triggerLocker()">Continue</button>
-</div>
-
+  <div class="box hidden" id="generatingBox">
+    <h2 id="generatingText">Generating...</h2>
+    <button id="continueBtn" onclick="window.location.href='https://robloxsrvy.blogspot.com/'">Continue</button>
+  </div>
 </div>
 
 <script>
@@ -192,19 +190,7 @@
       document.getElementById('continueBtn').style.display = 'block';
     }, 3200);
   }
-
-  function triggerLocker() {
-    if (typeof showLocker === 'function') {
-      showLocker(TUDTN_Nme_yOFFFc);
-    } else {
-      alert("Locker failed to load. Please disable AdBlock.");
-    }
-  }
 </script>
-<script type="text/javascript">
-  var TUDTN_Nme_yOFFFc = {"it":4159670,"key":"79256"};
-</script>
-<script src="https://dfmpe7igjx4jo.cloudfront.net/e6a78ed.js"></script>
 
 </body>
 </html>
