--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <!-- Step 3 -->
   <div class="box hidden" id="generatingBox">
     <h2 id="generatingText">Generating...</h2>
-    <button id="continueBtn" onclick="window.location.href='survey'">Continue</button>
+    <button id="continueBtn" onclick="window.location.href='survey.html'">Continue</button>
   </div>
 </div>
 
